reworked bot, rewrite on aiogram, fix errors, add webhooks and async work

--- a/.env
+++ b/.env
@@ -1,3 +1,12 @@
+# Telegram bot
 BOT_NAME=@currency_from_bank_bot
 BOT_CONTAINER_NAME=tg_bot_currency_rate
-BOT_TOKEN=r3349r82example_bot_token
+BOT_TOKEN=5142727896:AAEzLadtlBfN0kvQ8YAealFaPS_g2drHPEM
+WEBHOOK_URL=https://95f9-46-251-93-21.eu.ngrok.io
+
+# Redis
+REDIS_PORT=6379
+REDIS_HOST=redis
+
+# API
+API_PORT=5001
